--- a/angular.json
+++ b/angular.json
@@ -94,6 +94,57 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/app/**/*.ts",
+              "src/app/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "project": {
+      "projectType": "library",
+      "root": "projects/project",
+      "sourceRoot": "projects/project/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/project/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/project/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/project/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/project/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/project/**/*.ts",
+              "projects/project/**/*.html"
+            ]
+          }
         }
       }
     }
