Add ignore feature
This commit adds the ability to ignore certain patterns when checking import declarations. This is done by checking if the file path matches any of the patterns in the  array. If it does, the file is ignored and no further checks are performed.

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "ic": {
     "default": "allow",
+    "ignore": ["*.spec.ts"],
     "element": [
       {
         "type": "project",
@@ -84,7 +85,8 @@
       {
         "from": "project",
         "allow": [
-          "project", "app"
+          "project",
+          "app"
         ]
       }
     ]
